Our aproach uneven images problem was fixed

--- a/source/styles/sections/approach.scss
+++ b/source/styles/sections/approach.scss
@@ -34,7 +34,7 @@
     &__image{
         position: relative;
         max-width: 340px;
-        max-height: 236px;
+        // max-height: 236px;
         display: inline-block;
         vertical-align: top;
     }
@@ -50,7 +50,7 @@
         vertical-align: top;
         width: 64%;
         font-size: 0.875rem;
-        padding: 70px 70px 55px 90px;
+        padding: 60px 60px 55px 90px;
     }
 
     &__step{
